--- a/backend/server/templates/home.html
+++ b/backend/server/templates/home.html
@@ -10,7 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'ang/styles.css' %}"></head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <body>
   <app-root>Loading...</app-root>
   <script type="text/javascript" src="{% static 'ang/polyfills.js' %}"></script>
