Moved currency type to environment.ts, fixed filter bug

--- a/frontend/src/app/components/reports/reports.component.html
+++ b/frontend/src/app/components/reports/reports.component.html
@@ -70,7 +70,7 @@
         <tr *ngFor="let report of filtered_reports">
           <td>{{ report.agent_name }}</td>
           <td>{{ report.period | date:"yyyy, MMMM" }}</td>
-          <td>{{ report.volume | currency:"USD" }}</td>
+          <td>{{ report.volume | currency:environment.currency }}</td>
         </tr>
       </tbody>
     </table>
