Added some constraints on report period, handling errors on frontend

--- a/frontend/src/app/components/reports/reports.component.html
+++ b/frontend/src/app/components/reports/reports.component.html
@@ -17,6 +17,7 @@
     </button>
   </div>
   <div id="collapseCard" [ngbCollapse]="isCollapsed">
+    <ngb-alert *ngIf="alert.open" (close)="alert.open=false">{{ alert.error }}</ngb-alert>
     <div class="card col-md-8">
       <div class="card-body">
         <form [formGroup]="newReportForm" (ngSubmit)="onSubmit(newReportForm.value)">
